--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,7 @@
         "lib": [
             "ES2020",
             "DOM"
-        ]
+        ],
+        "baseUrl": "."
     },
-    "exclude": [
-        "tests/**/*"
-    ]
 }
