--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "xo": "^0.48.0"
   },
   "dependencies": {
-    "expect-type": "^0.13.0"
+    "expect-type": "^0.13.0",
+    "tsd": "^0.20.0"
+  },
+  "tsd": {
+    "directory": "tests"
   }
 }
